# play-with-gh-actions

./: main.py  pyproject.toml
.github/workflows/: build.yaml  docs.yaml
docs/: README.md
