[tool.poetry]
name = "play-with-gh-actions"
version = "0.1.0"
description = ""
authors = ["Julien Klaer <klaer.julien@gmail.com>"]
readme = "README.md"
packages = [{include = "play_with_gh_actions"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
